--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
 
     <header>
+        <h1> "<?php echo 'hola'; ?></h1>
         <nav>
             <a href="#">Login</a>
             <a href="#">Acerca de</a>
