--- a/index.html
+++ b/index.html
@@ -180,3 +180,18 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+<h1>
+    <?php echo "Hola"; ?>
+</h1>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
