--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+	<head> 
+		<title>Mi primer pagaina </title>
+		<script>
+		a = 5
+		b = 5
+		alert("El Valor de a+b es " + (a + b))
+		</script>
+	</head>
 
-<h1>Hola</h1>
-<p>intentando usar php</p>
-
-</body>
+	<body>
+		<h1>Primer intento de website</h1>
+		<p>Este es nuestro primer programa</p>
+  </body>
 </html>
 
 
