--- a/pagina.html
+++ b/pagina.html
@@ -10,9 +10,11 @@
 	</head>
 
 	<body>
+		<h1>Te amo mucho mi amor eres lo mas lindo y hermoso que me ha pasado en vida </h1>
+		<h2>Braynel Y Any</h2>
 		<h1>Primer intento de website</h1>
 		<p>Este es nuestro primer programa</p>
-  </body>
+  	</body>
 </html>
 
 
