--- a/pagina.html
+++ b/pagina.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head> 
+		<meta charset="utf-80" />
 		<title>Mi primer pagaina </title>
 		<script>
 		a = 5
 		b = 5
-		alert("El Valor de a+b es " + (a + b))
+		alert("El Valor de 5+5 es " + (a + b))
+		alert("este código va va funcionar")
 		</script>
 	</head>
 
@@ -14,7 +16,10 @@
 		<h2>Braynel Y Any</h2>
 		<h1>Primer intento de website</h1>
 		<p>Este es nuestro primer programa</p>
-  	</body>
+		<p>gran programa </p>
+		<p>Ejemplo</p>
+	</body>
+
 </html>
 
 
