--- a/pagina.html
+++ b/pagina.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-80" />
 		<title>Mi primer pagaina </title>
 		<script>
+			let nombre = ""
+			prompt("cuál es tu nombre?")
 		a = 5
 		b = 5
 		alert("El Valor de 5+5 es " + (a + b))
