--- a/pagina.html
+++ b/pagina.html
@@ -5,7 +5,7 @@
 		<title>Mi primer pagaina </title>
 		<script>
 			let nombre = ""
-			prompt("cuál es tu nombre?")
+			nombre = prompt("cuál es tu nombre?")
 		a = 5
 		b = 5
 		alert("El Valor de 5+5 es " + (a + b))
