--- a/pagina.html
+++ b/pagina.html
@@ -6,6 +6,7 @@
 		<script>
 			let nombre = ""
 			nombre = prompt("cuál es tu nombre?")
+			alert("Bienvenido " + (nombre))
 		a = 5
 		b = 5
 		alert("El Valor de 5+5 es " + (a + b))
